--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jade": "^1.11.0",
     "redis": "^3.0.2",
     "socket.io": "^3.1.2"
   },
