--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "test": "mocha tests/test.js --exit --timeout 5000",
     "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "expect": "^26.6.2",
     "express": "^4.17.1",
     "jade": "^1.11.0",
     "redis": "^3.0.2",
-    "socket.io": "^3.1.2"
+    "socket.io": "^3.1.2",
+    "socket.io-client": "^3.1.2",
+    "supertest": "^6.1.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
