--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "mocha tests/test.js --exit --timeout 5000",
+    "test": "grunt automatic",
     "start": "nodemon app.js"
   },
   "author": "",
@@ -14,12 +14,16 @@
     "expect": "^26.6.2",
     "express": "^4.17.1",
     "jade": "^1.11.0",
+    "mocha": "^8.3.1",
     "redis": "^3.0.2",
     "socket.io": "^3.1.2",
     "socket.io-client": "^3.1.2",
     "supertest": "^6.1.3"
   },
   "devDependencies": {
+    "grunt": "^1.3.0",
+    "grunt-contrib-jshint": "^3.0.0",
+    "grunt-mocha-test": "^0.13.3",
     "nodemon": "^2.0.7"
   }
 }
